# terminal-agent

./: .gitignore  README.md  pyproject.toml  setup.sh  test_timeout.py
.github/workflows/: ci.yml
src/: llm_services.py  main.py  settings.py
tests/: test_main.py  test_settings.py
